Add multi choice game route
